--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,6 @@
-cmake_minimum_required(3.20.0)
+cmake_minimum_required(VERSION 3.20.0)
+
+project(cross-gui-driver-project)
+
+add_subdirectory(src)
+add_subdirectory(test/qt)
