--- a/src/common/interface/CMakeLists.txt
+++ b/src/common/interface/CMakeLists.txt
@@ -1,11 +1,12 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.10)
 
 project(cross-gui-driver-interface)
 
 add_library(${PROJECT_NAME} INTERFACE)
 
+target_include_directories(${PROJECT_NAME} INTERFACE .)
+
 target_sources(${PROJECT_NAME} PUBLIC
-  FILE_SET HEADERS
-    FILES endpoint_handler_i.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/endpoint_handler_i.h
 )
 
