--- a/test/java/simple-app2/pom.xml
+++ b/test/java/simple-app2/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>kds.org</groupId>
-    <artifactId>simple-app</artifactId>
+    <groupId>org.kds</groupId>
+    <artifactId>simple-app2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -48,7 +48,7 @@
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>kds.org.App</mainClass>
+                            <mainClass>org.kds.App</mainClass>
                         </configuration>
                     </execution>
                 </executions>
