--- a/src/common/interface/CMakeLists.txt
+++ b/src/common/interface/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(cross-gui-driver-interface)
+project(cgd-interface)
 
 add_library(${PROJECT_NAME} INTERFACE)
 
