--- a/test/java/simple-app2/pom.xml
+++ b/test/java/simple-app2/pom.xml
@@ -25,7 +25,7 @@
             <artifactId>gui-driver</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>/home/kds/src/private/cross-gui-driver/src/drivers/java/gui-driver/target/gui-driver-1.0-SNAPSHOT.jar</systemPath>
+            <systemPath>/opt/kds/cgd/init/manual/java/cgd-java-manual-init.jar</systemPath>
         </dependency>
     </dependencies>
     <build>
